--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@ See the end for copying conditions.
 Version 2.12.15 (unreleased)
 
 ** libgnutls: Disable signature algorithms that are not supported
-for client certificate verification.
+for client certificate verification. Reported by Florian Weimer.
 
 ** libgnutls: Optimized DH generation process (ported from 3.0.x)
 
