--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2012-01-06  Nikos Mavrogiannopoulos <nmav@gnutls.org>
 
+	* ChangeLog, NEWS: updated changelog and news for release
+
+2012-01-06  Nikos Mavrogiannopoulos <nmav@gnutls.org>
+
+	* lib/gnutls_cipher.c: corrected typo
+
+2012-01-06  Nikos Mavrogiannopoulos <nmav@gnutls.org>
+
 	* NEWS, configure.ac, m4/hooks.m4: bumped version
 
 2012-01-06  Nikos Mavrogiannopoulos <nmav@gnutls.org>
