--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@ Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005,
               2006, 2007, 2008, 2009, 2010, 2011 Free Software Foundation, Inc.
 See the end for copying conditions.
 
-Version 2.12.15 (unreleased)
+Version 2.12.15 (released 2011-01-06)
 
 ** libgnutls: Disable signature algorithms that are not supported
 for client certificate verification. Reported by Florian Weimer.
