--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,15 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2011 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 3.0.12 (unreleased)
+
+** libgnutls: Corrected memory leak in DH parameter
+generation.
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 3.0.11 (released 2012-01-06)
 
 ** libgnutls: Corrected functionality of 
