--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,9 @@ See the end for copying conditions.
 
 * Version 3.0.12 (unreleased)
 
+** certtool: --outder option now works for private
+keys as well.
+
 ** libgnutls: Corrected memory leak in DH parameter
 generation.
 
