--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,16 @@ Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005,
               2006, 2007, 2008, 2009, 2010, 2011 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+Version 2.12.16 (released 2011-01-06)
+
+** libgnutls: Corrected functionality of
+gnutls_record_get_direction(). Reported by Philip Allison.
+
+** API and ABI modifications:
+
+No changes since last version.
+
+
 Version 2.12.15 (released 2011-01-06)
 
 ** libgnutls: Disable signature algorithms that are not supported
@@ -13,6 +23,7 @@ for client certificate verification. Reported by Florian Weimer.
 ** API and ABI modifications:
 
 No changes since last version.
+
 
 Version 2.12.14 (released 2011-11-08)
 
