--- a/NEWS
+++ b/NEWS
@@ -20,6 +20,7 @@ return a descriptive name of a DN OID.
 ** API and ABI modifications:
 gnutls_pubkey_encrypt_data: Added
 gnutls_x509_dn_oid_name: Added
+gnutls_session_resumption_requested: Added
 
 * Version 3.0.11 (released 2012-01-06)
 
