--- a/doc/cha-programs.texi
+++ b/doc/cha-programs.texi
@@ -101,6 +101,21 @@ By keeping the @code{--pskusername} parameter and removing the
 @code{--pskkey} parameter, it will query only for the password during
 the handshake.
 
+@subheading Listing the ciphersuites in a priority string
+@cindex Priority strings
+
+@example
+$ ./gnutls-cli --priority SECURE256 -l
+Cipher suites for SECURE256
+TLS_ECDHE_ECDSA_AES_256_CBC_SHA384                	0xc0, 0x24	TLS1.2
+TLS_ECDHE_ECDSA_AES_256_GCM_SHA384                	0xc0, 0x2e	TLS1.2
+TLS_ECDHE_RSA_AES_256_GCM_SHA384                  	0xc0, 0x30	TLS1.2
+TLS_DHE_RSA_AES_256_CBC_SHA256                    	0x00, 0x6b	TLS1.2
+TLS_DHE_DSS_AES_256_CBC_SHA256                    	0x00, 0x6a	TLS1.2
+TLS_RSA_AES_256_CBC_SHA256                        	0x00, 0x3d	TLS1.2
+@end example
+
+
 @node The gnutls-serv tool
 @section The gnutls-serv tool
 @cindex gnutls-serv
