Collapse and cleanup copyright information.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 GnuTLS AUTHORS -- Information about the authors.
-Copyright (C) 2000-2010, 2012 Free Software Foundation, Inc.
+Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
 The copyright holder for GnuTLS is Free Software Foundation, Inc., 51
