--- a/doc/cha-gtls-app.texi
+++ b/doc/cha-gtls-app.texi
@@ -759,7 +759,7 @@ security level 128-bit or more and a message authenticity
 security level of 80 bits or more.
 
 @item SECURE192 @tab
-Means all "secure" ciphersuites that offer a 
+Means all the known to be secure ciphersuites that offer a 
 security level 192-bit or more and a message authenticity
 security level of 128 bits or more.
 
